--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Welcome to my autobiography, I am web developer and I'll show you my skills, habilities, workflow, experience and so much more.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Henrry Pirir">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <script src="https://use.fontawesome.com/c2034beda6.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="script.js"></script>
-  <title>Henrry Pirir</title>
+  <title>Web developer | Autobiography Henrry Pirir</title>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
