--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <input type="checkbox" id="sidebartoggler" name="" value="" style="display: none;">
+    <input type="checkbox" id="sidebartoggler" style="display: none;">
 
     <div id="page">
       <label for="sidebartoggler" class="toggle"><span>MENU</span> ☰</label>
