--- a/index.html
+++ b/index.html
@@ -95,6 +95,38 @@
             </div>
           </div>
         </section>
+
+        <section id="informativa">
+          <div class="frases">
+          <h3><strong>"<strong>El exito es 1% de inspiración y 99% de transpiración<strong>"</strong></h3>
+          </div>
+          <div class="info">
+            <div class="info-row">
+              <i class="fa fa-3x fa-lightbulb-o"></i>
+              <h3>DESIGN</h3>
+              <p>Hola muchachos</p>
+            </div>
+
+            <div class="info-row">
+              <i class="fa fa-3x fa-drupal"></i>
+              <h3>DRUPAL</h3>
+              <p>Hola muchachos</p>
+            </div>
+
+            <div class="info-row">
+              <i class="fa fa-3x fa-code"></i>
+              <h3>WEB DEVELOPMENT</h3>
+              <p>Hola muchachos</p>
+            </div>
+
+            <div class="info-row">
+              <i class="fa fa-3x fa-mobile"></i>
+              <h3>RESPONSIVE DESIGN</h3>
+              <p>Hola muchachos</p>
+            </div>
+          </div>
+        </section>
+
       </div>
     </div>
   </body>
