--- a/index.html
+++ b/index.html
@@ -98,31 +98,34 @@
 
         <section id="informativa">
           <div class="frases">
-          <h1><strong>"<strong>El exito es 1% de inspiración y 99% de transpiración<strong>"</strong></h1>
+          <h1>"El exito es 1% de inspiración y 99% de transpiración"</h1>
           </div>
           <div class="info">
             <div class="info-row">
               <i class="fa fa-3x fa-lightbulb-o"></i>
               <h3>DESIGN</h3>
-              <p>Hola muchachos</p>
+              <p>Make posible your ideas, is my job.<br>
+               The true meaning of design is not only about create visuals, it needs focus on minimal details that could provide good user experience.</p>
             </div>
 
             <div class="info-row">
               <i class="fa fa-3x fa-drupal"></i>
               <h3>DRUPAL</h3>
-              <p>Hola muchachos</p>
+              <p>Administrable Websites.<br>
+                It's the best way for you to feed the content on your site.
+              </p>
             </div>
 
             <div class="info-row">
               <i class="fa fa-3x fa-code"></i>
               <h3>WEB DEVELOPMENT</h3>
-              <p>Hola muchachos</p>
+              <p>The internet is now a platform of services and I have the skills to offer your visitors the optimal experience into your website.</p>
             </div>
 
             <div class="info-row">
               <i class="fa fa-3x fa-mobile"></i>
-              <h3>RESPONSIVE DESIGN</h3>
-              <p>Hola muchachos</p>
+              <h3>RESPONSIVE</h3>
+              <p>Responsive webdesign is what’s shaping the online experience now. I can do much more than just adjusting screen resolutions and using automatically resizable images</p>
             </div>
           </div>
         </section>
