--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web developer | Autobiography Henrry Pirir</title>
     <meta name="description" content="Welcome to my autobiography, I am web developer and I'll show you my skills, habilities, workflow, experience and so much more.">
+    <meta name="keywords" content="web developer, programadores en guatemala, paginas web, drupal, front end, innovacion, creatividad, adaptable, sitios responsives, tecnologia, tecnología en guatemala, geek, e-commerce, web service, sql, my sql, wordpress, ciudad de guatemala, empresas de tecnología, html 5, css 3, jQuery, nodejs">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Henrry Pirir">
     <link rel="stylesheet" href="style.css">
@@ -31,11 +32,12 @@
       <label for="sidebartoggler" class="toggle"><span>MENU</span> ☰</label>
       <nav class="sidebar">
       <ul>
+      <li><a href="#home">HOME</a></li>
       <li><a href="#profile">About me</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#fb">Facebook</a></li>
-      <li><a href="#twtt">Twitter</a></li>
-      <li><a href="mailto:hapydeveloper@gmail.com">email me</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#informativa">I can offer</a></li>
+      <li><a href="#contact-me">Follow me</a></li>
+      <li><a href="mailto:hapydeveloper@gmail.com">+email me</a></li>
       </ul>
       </nav>
 
@@ -45,7 +47,7 @@
         <section id="home">
           <div class="text">
             <h1>HELLO, I'M<br>HENRRY PIRIR</h1>
-            <p class="descrip">WEB DEVELOPER / BUSSINESS ADMINITRATOR</p>
+            <p class="descrip">WEB DEVELOPER / BUSINESS ADMINITRATOR</p>
           </div>
         </section>
 
@@ -130,6 +132,38 @@
           </div>
         </section>
 
+        <section id="contact-me">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61763.145175410566!2d-90.61965219245893!3d14.644780152537647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a03c010b8a81%3A0x51ca7679b78b66b6!2sMixco!5e0!3m2!1ses!2sgt!4v1475702600946" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+          <div class="informacion-g">
+            <div class="contact-info">
+              <div class="contact-item">
+                <i class="fa fa-2x fa-globe" aria-hidden="true"></i>
+                <h4>Guatemala City, C.A.</h4>
+              </div>
+
+              <div class="contact-item">
+                <i class="fa fa-2x fa-phone" aria-hidden="true"></i>
+                <h4>(+502) 5671-1364</h4>
+              </div>
+
+              <div class="contact-item">
+                <i class="fa fa-2x fa-paper-plane-o" aria-hidden="true"></i>
+                <h4>hapydeveloper@gmail.com</h4>
+              </div>
+            </div>
+
+            <div class="contact-info">
+              <a href="https://www.facebook.com/hapydev/" target="_blank"><i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/henrrypirir" target="_blank"><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
+              <a href="https://github.com/henrrypirir" target="_blank"><i class="fa fa-2x fa-github" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </section>
+
+        <footer>
+          <p><strong>HENRRY A. PIRIR | HAPYDEV </strong></p>
+        </footer>
       </div>
     </div>
   </body>
