--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         </section>
 
         <section id="contact-me">
+          <h1>CONTACT US</h1>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61763.145175410566!2d-90.61965219245893!3d14.644780152537647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a03c010b8a81%3A0x51ca7679b78b66b6!2sMixco!5e0!3m2!1ses!2sgt!4v1475702600946" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
           <div class="informacion-g">
