--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 
       <div class="page-content">
 
-        <section id="home">
+        <section id="home" class="flex">
           <div class="text">
             <h1>HELLO, I'M<br>HENRRY PIRIR</h1>
             <p class="descrip">WEB DEVELOPER / BUSINESS ADMINITRATOR</p>
           </div>
         </section>
 
-        <section id="profile">
+        <section id="profile" class="flex">
           <div class="text">
             <h1>ABOUT ME</h1>
 
@@ -66,7 +66,7 @@
           </div>
         </section>
 
-        <section id="skills">
+        <section id="skills" class="flex">
           <div class="text">
             <h1>SKILLS</h1>
             <p>We are your friends</p>
@@ -98,7 +98,7 @@
           </div>
         </section>
 
-        <section id="informativa">
+        <section id="informativa" class="flex">
           <div class="frases">
           <h1>"El exito es 1% de inspiración y 99% de transpiración"</h1>
           </div>
@@ -132,9 +132,8 @@
           </div>
         </section>
 
-        <section id="contact-me">
-          <h1>CONTACT US</h1>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61763.145175410566!2d-90.61965219245893!3d14.644780152537647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a03c010b8a81%3A0x51ca7679b78b66b6!2sMixco!5e0!3m2!1ses!2sgt!4v1475702600946" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <section id="contact-me" class="flex">
+          <h1>CONTACT</h1>
 
           <div class="informacion-g">
             <div class="contact-info">
@@ -153,11 +152,17 @@
                 <h4>hapydeveloper@gmail.com</h4>
               </div>
             </div>
-
+            <br>
+            <br>
+            <hr>
+            <br>
             <div class="contact-info">
-              <a href="https://www.facebook.com/hapydev/" target="_blank"><i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a>
-              <a href="https://twitter.com/henrrypirir" target="_blank"><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
-              <a href="https://github.com/henrrypirir" target="_blank"><i class="fa fa-2x fa-github" aria-hidden="true"></i></a>
+              <a href="https://www.facebook.com/hapydev/" target="_blank"><i class="fa fa-3x fa-facebook" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/henrrypirir" target="_blank"><i class="fa fa-3x fa-twitter" aria-hidden="true"></i></a>
+              <a href="https://github.com/henrrypirir" target="_blank"><i class="fa fa-3x fa-github" aria-hidden="true"></i></a>
+              <a href="https://gitlab.com/henrrypirir" target="_blank"><i class="fa fa-gitlab fa-3x" aria-hidden="true"></i></a>
+              <a href="https://gt.linkedin.com/in/henrrypirir" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+              <a href="https://grupoalboroto.slack.com/" target="_blank"><i class="fa fa-slack fa-3x" aria-hidden="true"></i></a>
             </div>
           </div>
         </section>
