--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             I designed this site so you can get to know me on a personal level.
             My passion for design, developement, some fun works, my favorite quotes, and so much more.</p>
 
-            <p>Now I'm working to my own company <span class="tag">#Trasquilados</span> with my brother. I am entrepreneur, book reader & technology lover.</p>
+            <p>Now I'm working to my own company <span class="tag">#GrupoAlboroto</span> with my brother. I am entrepreneur, book reader & technology lover.</p>
 
             <h4 class="cita">"Un profesional que no siente pasión por su trabajo es un estorbo con conocimiento"</h4>
           </div>
@@ -161,7 +161,7 @@
               <a href="https://twitter.com/henrrypirir" target="_blank"><i class="fa fa-3x fa-twitter" aria-hidden="true"></i></a>
               <a href="https://github.com/henrrypirir" target="_blank"><i class="fa fa-3x fa-github" aria-hidden="true"></i></a>
               <a href="https://gitlab.com/henrrypirir" target="_blank"><i class="fa fa-gitlab fa-3x" aria-hidden="true"></i></a>
-              <a href="https://gt.linkedin.com/in/henrrypirir" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+              <a href="https://www.linkedin.com/in/henrrypirir" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
               <a href="https://grupoalboroto.slack.com/" target="_blank"><i class="fa fa-slack fa-3x" aria-hidden="true"></i></a>
             </div>
           </div>
