--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web developer | Autobiography Henrry Pirir</title>
+    <link rel="icon" href="./images/favicon.png">
     <meta name="description" content="Welcome to my autobiography, I am web developer and I'll show you my skills, habilities, workflow, experience and so much more.">
     <meta name="keywords" content="web developer, programadores en guatemala, paginas web, drupal, front end, innovacion, creatividad, adaptable, sitios responsives, tecnologia, tecnología en guatemala, geek, e-commerce, web service, sql, my sql, wordpress, ciudad de guatemala, empresas de tecnología, html 5, css 3, jQuery, nodejs">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
